objects/Quote__c.object
<CustomObject>
    <description>削除対象OBject</description>
    <fields>
        <fullName>Biko1__c</fullName>
        <label>備考1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Biko2__c</fullName>
        <label>備考2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Biko3__c</fullName>
        <label>備考3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BranchNo__c</fullName>
        <label>枝番</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BuhinKousen__c</fullName>
        <formula>SalesOrder__r.SalesAccount__r.PartsCommission__c</formula>
        <label>部品口銭</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bumon__c</fullName>
        <label>部門</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BushoName__c</fullName>
        <label>部署名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Busho__c</fullName>
        <label>部署</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClusterName__c</fullName>
        <label>クラスタ名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <label>クラスタ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedUserCode__c</fullName>
        <label>作成者コード</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedUserName__c</fullName>
        <label>作成者名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedUsserName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>作成者名</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CreatedUserName_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>DESTINATION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EigyoTantoshaCode__c</fullName>
        <label>営業担当者コード</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EigyoTantoshaName__c</fullName>
        <label>営業担当者名称</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EkimuKousen__c</fullName>
        <formula>SalesOrder__r.SalesAccount__r.ServicesCommission__c</formula>
        <label>役務口銭</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndUser__c</fullName>
        <label>エンドユーザ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>派遣時間</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GroupTopKakunin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>グループ長確認</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HoshuShurui__c</fullName>
        <label>保守種類</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HukugouMitsumori__c</fullName>
        <label>複合見積</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HyomenNebikiRitsu__c</fullName>
        <label>表面値引率</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>JuchuKakudoName__c</fullName>
        <label>受注確度名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JuchuKakudo__c</fullName>
        <label>受注確度</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JuchuMikomiNengetsu__c</fullName>
        <label>受注見込年月</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JutyuYoteiTorokuZumi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>受注予定登録済</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KeikaYear__c</fullName>
        <label>経過年数</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeiyakuEndDateFormula__c</fullName>
        <formula>Datevalue(KeiyakuEndDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KeiyakuEndDate__c</fullName>
        <label>契約終了日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>KeiyakuStartDateFormula__c</fullName>
        <formula>Datevalue(KeiyakuStartDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KeiyakuStartDate__c</fullName>
        <label>契約開始日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>KeiyakusakiAddress__c</fullName>
        <formula>Keiyakusaki__r.Address__c</formula>
        <label>契約先 住所</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeiyakusakiCode__c</fullName>
        <formula>Keiyakusaki__r.Code__c</formula>
        <label>契約先コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeiyakusakiCountryCode__c</fullName>
        <formula>Keiyakusaki__r.CountryCode__c</formula>
        <label>契約先 国コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeiyakusakiCountryName__c</fullName>
        <formula>Keiyakusaki__r.Country__c</formula>
        <label>契約先 国名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeiyakusakiName__c</fullName>
        <formula>Keiyakusaki__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約先名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeiyakusakiTantosha_Affiliation__c</fullName>
        <label>契約先担当者 所属</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeiyakusakiTantosha_FAX__c</fullName>
        <label>契約先担当者 FAX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeiyakusakiTantosha_TEL__c</fullName>
        <label>契約先担当者 TEL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeiyakusakiTantosha_Yakushoku__c</fullName>
        <label>契約先担当者 役職</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeiyakusakiTantosha__c</fullName>
        <label>契約先担当者</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeiyakusakiUndergraduate__c</fullName>
        <formula>Keiyakusaki__r.UndergraduateFormula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約先学部・事業所</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keiyakusaki__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>契約先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>見積 (契約先)</relationshipLabel>
        <relationshipName>KeiyakuTantosha_Mitsumoris</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KigyoTani__c</fullName>
        <label>企業単位</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KyakusakiMitsumoriIraiNo__c</fullName>
        <label>客先見積依頼No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KyoriKubun__c</fullName>
        <label>距離区分</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LanguageName__c</fullName>
        <label>言語名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>言語</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MitsumoriShubetsuName__c</fullName>
        <label>見積種別名称</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MitsumoriShubetsu__c</fullName>
        <label>見積種別</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MitsumoriShusseNebikigaku__c</fullName>
        <label>見積出精値引額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MitsumoriSogaku__c</fullName>
        <label>見積総額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MitsumorishoYukoKigenFormula__c</fullName>
        <formula>Datevalue(MitsumorishoYukoKigen__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>見積書有効期限</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MitsumorishoYukoKigen__c</fullName>
        <label>見積書有効期限（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MitsumorishoYukoKikan__c</fullName>
        <label>見積書有効期間</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MitumoriRequestedDateFormula__c</fullName>
        <formula>Datevalue(MitumoriRequestedDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>見積依頼日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MitumoriRequestedDate__c</fullName>
        <label>見積依頼日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NonyuKigenFormula__c</fullName>
        <formula>Datevalue(NonyuKigen__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>納入期限</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NonyuKigen__c</fullName>
        <label>納入期限（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NonyuKikan__c</fullName>
        <label>納入期間</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NonyuKizitsu_Tekigi__c</fullName>
        <label>納入期日（適宜）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonyuTantoshaAffiliation__c</fullName>
        <label>納入先担当者 所属</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonyusakiAddress__c</fullName>
        <formula>Nonyusaki__r.Address__c</formula>
        <label>納入先 住所</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonyusakiCode__c</fullName>
        <formula>Nonyusaki__r.Code__c</formula>
        <label>納入先コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonyusakiCountryCode__c</fullName>
        <formula>Nonyusaki__r.CountryCode__c</formula>
        <label>納入先 国コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonyusakiCountryName__c</fullName>
        <formula>Nonyusaki__r.Country__c</formula>
        <label>納入先 国名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonyusakiName__c</fullName>
        <formula>Nonyusaki__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>納入先名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonyusakiTantoshaYakushoku__c</fullName>
        <label>納入先担当者 役職</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonyusakiTantosha_FAX__c</fullName>
        <label>納入先担当者 FAX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonyusakiTantosha_TEL__c</fullName>
        <label>納入先担当者 TEL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonyusakiTantosha__c</fullName>
        <label>納入先担当者</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonyusakiUndergraduate__c</fullName>
        <formula>Nonyusaki__r.UndergraduateFormula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>納入先学部・事業所</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nonyusaki__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>納入先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>見積</relationshipLabel>
        <relationshipName>NonyusakiTantosha_Mitsumoris</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderPlanNo__c</fullName>
        <formula>OrderPlan__r.OrderPlanNo_sync__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>受注予定番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>受注予定</label>
        <referenceTo>OrderPlan__c</referenceTo>
        <relationshipLabel>商談</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PublishedDateFormula__c</fullName>
        <formula>Datevalue(PublishedDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>発行日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PublishedDate__c</fullName>
        <label>発行日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quotaion__c</fullName>
        <label>QUOTATION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteNo_BranchNo_Sync__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>見積No/枝番_連携用</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RegionName__c</fullName>
        <label>地域名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>地域</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegisteredDateFormula__c</fullName>
        <formula>Datevalue(RegisteredDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>登録日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RegisteredDate__c</fullName>
        <label>登録日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SalesOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>販売オーダ</label>
        <referenceTo>SalesOrder__c</referenceTo>
        <relationshipLabel>商談</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <label>系列</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShiharaiJokenKubun__c</fullName>
        <label>支払条件区分</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShiharaiJokenName__c</fullName>
        <label>支払条件</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipFrom_Code__c</fullName>
        <label>SHIP FORM （コード）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipFrom_Tekigi__c</fullName>
        <label>SHIP FORM （適宜）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipMethod_Code__c</fullName>
        <label>SHIP METHOD （コード）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipMethod_Tekigi__c</fullName>
        <label>SHIP METHOD （適宜）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShitenchoShonin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>支店長承認</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TargetBody__c</fullName>
        <label>対象号機</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TitleShohinCode__c</fullName>
        <label>タイトル商品コード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TitleShohinName__c</fullName>
        <label>タイトル商品名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UkewatashiBashoKubun__c</fullName>
        <label>受渡場所区分</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UkewatashiBashoName__c</fullName>
        <label>受渡場所</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UkewatashiJokenName__c</fullName>
        <label>受渡条件名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UkewatashiJoken__c</fullName>
        <label>受渡条件</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitBodyLink__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>本体号機</label>
        <referenceTo>UnitBody__c</referenceTo>
        <relationshipLabel>見積</relationshipLabel>
        <relationshipName>Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UnitBody__c</fullName>
        <label>本体号機</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdatedDateFormula__c</fullName>
        <formula>Datevalue(UpdatedDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>更新日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UpdatedDate__c</fullName>
        <label>更新日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UriageYoteiNengetsu__c</fullName>
        <label>売上予定年月</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YosoName__c</fullName>
        <label>要素名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yoso__c</fullName>
        <label>要素</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>見積</label>
    <listViews>
        <fullName>ALL_View</fullName>
        <columns>NAME</columns>
        <columns>MitsumoriShubetsuName__c</columns>
        <columns>TitleShohinName__c</columns>
        <columns>Series__c</columns>
        <columns>Region__c</columns>
        <columns>MitsumoriSogaku__c</columns>
        <columns>CreatedUserName__c</columns>
        <columns>Nonyusaki__c</columns>
        <columns>HyomenNebikiRitsu__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>見積No</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>BumonRoleSharing__c</fullName>
        <label>部門のロールへの共有</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>KeiretsuRoleSharing__c</fullName>
        <label>系列のロールへの共有</label>
    </sharingReasons>
</CustomObject>